# nbnchecker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  api.py  main.py  nbnchecker.py  pyproject.toml
.github/: release-please.yml
.github/workflows/: publish.yaml  scorecards.yml  test.yaml
templates/: index.html
tests/: test_api.py  test_main.py
